--- a/1_local_platform_image_classification_template.ipynb
+++ b/1_local_platform_image_classification_template.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "831ad166",
    "metadata": {},
@@ -43,6 +44,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "27499345-4512-444e-8c88-c8ad22a314fc",
    "metadata": {},
@@ -613,6 +615,8 @@
     "class IM:\n",
     "    def __init__(self):\n",
     "        self.model_path = './meta_data'\n",
+    "        self.preprocessor_path = './meta_data/prprocessor'\n",
+    "        self.sr_path = './meta_data/super_resol'\n",
     "\n",
     "\n",
     "# pm 객체\n",
@@ -649,6 +653,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "934406ce",
    "metadata": {},
