--- a/0_local_image_captioning.ipynb
+++ b/0_local_image_captioning.ipynb
@@ -114,7 +114,7 @@
       "cell_type": "code",
       "source": [
         "# 설치(코랩 환경)\n",
-        "!pip install transformers==4.27 torch\n",
+        "!pip install transformers==4.29 torch\n",
         "!pip install pycocoevalcap"
       ],
       "metadata": {
@@ -638,7 +638,7 @@
         "        # train 시 성능지표를 보기 위한 작업 (선택사항)\n",
         "        #with torch.no_grad():\n",
         "        #  model.eval()\n",
-        "        #  train_caption+=processor.batch_decode(model.generate(pixel_values=pixel_values,max_length = 100),skip_special_tokens=True)\n",
+        "        #  train_caption+=processor.batch_decode(model.generate(pixel_values=pixel_values,max_length = 300),skip_special_tokens=True)\n",
         "        #train_hist2.append(loss.tolist())\n",
         "\n",
         "        Loss+=loss.tolist()\n",
@@ -811,7 +811,7 @@
         "model_sr.to(device)\n",
         "ImageList = image_list_with_sr_inf('.meta_data/inference_image_dataset',0,10)\n",
         "\n",
-        "model_sr.to('cpu') # 5000장에서 약 2분 소요"
+        "model_sr.to('cpu')"
       ],
       "metadata": {
         "id": "UVhEDtFKA-EW"
@@ -837,7 +837,7 @@
       "source": [
         "pixel_values =  processor.image_processor(images=ImageList, return_tensors=\"pt\").pixel_values # 데이터 변환\n",
         "model.to(device)\n",
-        "outputs=processor.batch_decode(model.generate(pixel_values=pixel_values.to(device),max_length = 70),skip_special_tokens=True)"
+        "outputs=processor.batch_decode(model.generate(pixel_values=pixel_values.to(device),max_length = 300),skip_special_tokens=True)"
       ],
       "metadata": {
         "id": "wXw7fHoHBcNV"
@@ -866,16 +866,11 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "4c067e6a-8187-4727-b55a-436b7d55b780",
-        "9-4PTTUL4AuP",
         "3p_hLjWF5oBp",
         "4I6p-03l0z4v",
         "1gSVYpED5Jqz",
-        "fCj-2b9L3cjP",
         "PxPBCLcd40Ey",
-        "0d590e79-1916-4700-b50d-63322b892487",
-        "d2448471-996d-425e-8130-aca498eb8e5f",
-        "oo6qNtJeCLIX"
+        "d2448471-996d-425e-8130-aca498eb8e5f"
       ]
     },
     "kernelspec": {
