--- a/0_local_image_captioning.ipynb
+++ b/0_local_image_captioning.ipynb
@@ -2,11 +2,8 @@
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "# 구글 드라이브 마운트\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
+      "execution_count": 1,
+      "id": "4wti8hYOjlOq",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -14,24 +11,25 @@
         "id": "4wti8hYOjlOq",
         "outputId": "64142189-1df1-4292-92dc-7c6f14cd1fc8"
       },
-      "id": "4wti8hYOjlOq",
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Mounted at /content/drive\n"
           ]
         }
+      ],
+      "source": [
+        "# 구글 드라이브 마운트\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# 프로젝트 폴더로 경로 이동\n",
-        "cd ./drive/MyDrive/INISW_2기/KU_proj/"
-      ],
+      "execution_count": 3,
+      "id": "pkAbRWEDjtZf",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -39,16 +37,18 @@
         "id": "pkAbRWEDjtZf",
         "outputId": "52fd67a2-5f46-4227-875a-bf497b8faf8a"
       },
-      "id": "pkAbRWEDjtZf",
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/content/drive/MyDrive/INISW_2기/KU_proj\n"
           ]
         }
+      ],
+      "source": [
+        "# 프로젝트 폴더로 경로 이동\n",
+        "cd ./drive/MyDrive/INISW_2기/KU_proj/"
       ]
     },
     {
@@ -112,27 +112,27 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "NnXUQ5f9HYfq",
+      "metadata": {
+        "id": "NnXUQ5f9HYfq"
+      },
+      "outputs": [],
       "source": [
         "# 설치(코랩 환경)\n",
         "!pip install transformers==4.29 torch\n",
         "!pip install pycocoevalcap"
-      ],
-      "metadata": {
-        "id": "NnXUQ5f9HYfq"
-      },
-      "id": "NnXUQ5f9HYfq",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 7,
       "id": "178e030e",
       "metadata": {
+        "id": "178e030e",
         "vscode": {
           "languageId": "plaintext"
-        },
-        "id": "178e030e"
+        }
       },
       "outputs": [],
       "source": [
@@ -170,8 +170,8 @@
       "execution_count": null,
       "id": "2505e67f-d541-4d38-962b-5ee1d0ff11b9",
       "metadata": {
-        "tags": [],
-        "id": "2505e67f-d541-4d38-962b-5ee1d0ff11b9"
+        "id": "2505e67f-d541-4d38-962b-5ee1d0ff11b9",
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -231,21 +231,27 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "uQ6izVeW1FPs",
+      "metadata": {
+        "id": "uQ6izVeW1FPs"
+      },
+      "outputs": [],
       "source": [
         "# super resolution을 진행할 모델 불러오기\n",
         "from transformers import Swin2SRImageProcessor, Swin2SRForImageSuperResolution\n",
         "pro_sr = Swin2SRImageProcessor.from_pretrained(\"./meta_data/super_resol/preprocessor\")\n",
         "model_sr = Swin2SRForImageSuperResolution.from_pretrained(\"./meta_data/super_resol/srwinsr.pt\")"
-      ],
-      "metadata": {
-        "id": "uQ6izVeW1FPs"
-      },
-      "id": "uQ6izVeW1FPs",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "2wmkoGl31F1K",
+      "metadata": {
+        "id": "2wmkoGl31F1K"
+      },
+      "outputs": [],
       "source": [
         "# SR 진행된 이미지 리스트 반환 함수\n",
         "def image_list_with_sr(captions,dir,n,m):\n",
@@ -256,16 +262,16 @@
         "        image = super_reso(image) if image.size[0]<50 or image.size[1]<100 else image\n",
         "        imagelist.append(image)\n",
         "    return imagelist"
-      ],
-      "metadata": {
-        "id": "2wmkoGl31F1K"
-      },
-      "id": "2wmkoGl31F1K",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "Ws7l-P_21GHf",
+      "metadata": {
+        "id": "Ws7l-P_21GHf"
+      },
+      "outputs": [],
       "source": [
         "# 개별 이미지 SR 진행 함수\n",
         "def super_reso(image):\n",
@@ -279,16 +285,16 @@
         "    output = np.moveaxis(output, source=0, destination=-1)\n",
         "    output = (output * 255.0).round().astype(np.uint8)\n",
         "    return Image.fromarray(output)"
-      ],
-      "metadata": {
-        "id": "Ws7l-P_21GHf"
-      },
-      "id": "Ws7l-P_21GHf",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "U2GSB1NP1PGS",
+      "metadata": {
+        "id": "U2GSB1NP1PGS"
+      },
+      "outputs": [],
       "source": [
         "# 조건에 따른 SR 적용된 이미지 리스트\n",
         "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
@@ -299,13 +305,7 @@
         "model_sr.to('cpu')\n",
         "\n",
         "# 25000장에서 약 3.5분 소요"
-      ],
-      "metadata": {
-        "id": "U2GSB1NP1PGS"
-      },
-      "id": "U2GSB1NP1PGS",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -359,16 +359,22 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##### 데이터 합치기 & 레이블 생성"
-      ],
+      "id": "4I6p-03l0z4v",
       "metadata": {
         "id": "4I6p-03l0z4v"
       },
-      "id": "4I6p-03l0z4v"
+      "source": [
+        "##### 데이터 합치기 & 레이블 생성"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "GkbkYD_L2N1o",
+      "metadata": {
+        "id": "GkbkYD_L2N1o"
+      },
+      "outputs": [],
       "source": [
         "# 옵션\n",
         "option = {\n",
@@ -376,26 +382,20 @@
         "    'num': 25000,\n",
         "    'batch_size':16,\n",
         "}"
-      ],
-      "metadata": {
-        "id": "GkbkYD_L2N1o"
-      },
-      "id": "GkbkYD_L2N1o",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# 이미지와 캡션 매칭\n",
-        "data = [{'text':captions[i]['label'],'image':ImageList[i]} for i in range(option['start'],option['start']+option['num'])]"
-      ],
+      "execution_count": null,
+      "id": "EkVvs1xS20EW",
       "metadata": {
         "id": "EkVvs1xS20EW"
       },
-      "id": "EkVvs1xS20EW",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# 이미지와 캡션 매칭\n",
+        "data = [{'text':captions[i]['label'],'image':ImageList[i]} for i in range(option['start'],option['start']+option['num'])]"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -411,30 +411,30 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "A0gOT4m209h-",
+      "metadata": {
+        "id": "A0gOT4m209h-"
+      },
+      "outputs": [],
       "source": [
         "train_dataset = ImageCaptioningDataset(data[:int(0.8*option['num'])], processor)\n",
         "val_dataset = ImageCaptioningDataset(data[int(0.8*option['num']):], processor)\n",
         "train_dataloader = DataLoader(train_dataset,shuffle=False,batch_size = option['batch_size'])\n",
         "val_dataloader = DataLoader(val_dataset,shuffle=False,batch_size = option['batch_size'])"
-      ],
-      "metadata": {
-        "id": "A0gOT4m209h-"
-      },
-      "id": "A0gOT4m209h-",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "len(train_dataloader), len(val_dataloader)"
-      ],
+      "execution_count": null,
+      "id": "uLUPHlbS05R_",
       "metadata": {
         "id": "uLUPHlbS05R_"
       },
-      "id": "uLUPHlbS05R_",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "len(train_dataloader), len(val_dataloader)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -450,30 +450,36 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "KVudfm7Z3b2R",
+      "metadata": {
+        "id": "KVudfm7Z3b2R"
+      },
+      "outputs": [],
       "source": [
         "#모델 구축\n",
         "from transformers import BlipForConditionalGeneration\n",
         "model = BlipForConditionalGeneration.from_pretrained(mode)"
-      ],
-      "metadata": {
-        "id": "KVudfm7Z3b2R"
-      },
-      "id": "KVudfm7Z3b2R",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### 학습(train) 시 성능지표 확인 위한 코드"
-      ],
+      "id": "fCj-2b9L3cjP",
       "metadata": {
         "id": "fCj-2b9L3cjP"
       },
-      "id": "fCj-2b9L3cjP"
+      "source": [
+        "### 학습(train) 시 성능지표 확인 위한 코드"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "tH2yhYdi3csx",
+      "metadata": {
+        "id": "tH2yhYdi3csx"
+      },
+      "outputs": [],
       "source": [
         "# 모델이 생성한 캡션을 json 파일로 저장해주는 함수\n",
         "def gen_captions(captions,filename):\n",
@@ -483,16 +489,16 @@
         "\n",
         "    with open(filename,'w') as f:\n",
         "      json.dump(gen,f)"
-      ],
-      "metadata": {
-        "id": "tH2yhYdi3csx"
-      },
-      "id": "tH2yhYdi3csx",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "8Ip7plhc3c0j",
+      "metadata": {
+        "id": "8Ip7plhc3c0j"
+      },
+      "outputs": [],
       "source": [
         "# 생성된 캡션을 기반으로, ground_truth 파일과 함께 성능지표를 계산해주는 함수\n",
         "def coco_caption_eval(annotation_file, results_file):\n",
@@ -508,31 +514,29 @@
         "        print(f'{metric}: {score:.3f}')\n",
         "\n",
         "    return coco_eval"
-      ],
-      "metadata": {
-        "id": "8Ip7plhc3c0j"
-      },
-      "id": "8Ip7plhc3c0j",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "GZ4jqnIJ3dDx",
+      "metadata": {
+        "id": "GZ4jqnIJ3dDx"
+      },
+      "outputs": [],
       "source": [
         "val_cpath = './meta_data/output/val' # validation 위해 모델이 생성한 캡션 파일 저장하는 경로\n",
         "val_rpath = './meta_data/annotations/gt_captions.json' # 성능지표 계산 시 참조하는 ground-truth 캡션 파일 경로\n",
         "train_hist=[] # loss 값 확인 위한 리스트\n",
         "val_hist=[] # loss 값 확인 위한 리스트"
-      ],
-      "metadata": {
-        "id": "GZ4jqnIJ3dDx"
-      },
-      "id": "GZ4jqnIJ3dDx",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "PxPBCLcd40Ey",
+      "metadata": {
+        "id": "PxPBCLcd40Ey"
+      },
       "source": [
         "### fine-tuning 대상 layer 정하기\n",
         "\n",
@@ -541,27 +545,29 @@
         "- 모델 layer 중 동결(frozen)할 layer와 학습가능(trainable)한 layer 구분하기\n",
         "  - 해당 프로젝트 실험 결과, 전층(all layer)를 작은 학습률(lr: 1e-6)로 fine-tuning한 버전이 가장 높은 성능을 보였음\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "PxPBCLcd40Ey"
-      },
-      "id": "PxPBCLcd40Ey"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# 모델 구조 살펴보기\n",
-        "print(model)"
-      ],
+      "execution_count": null,
+      "id": "qJaUT7FJ5PiI",
       "metadata": {
         "id": "qJaUT7FJ5PiI"
       },
-      "id": "qJaUT7FJ5PiI",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# 모델 구조 살펴보기\n",
+        "print(model)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "OIWQwNUD5SO4",
+      "metadata": {
+        "id": "OIWQwNUD5SO4"
+      },
+      "outputs": [],
       "source": [
         "# 필요에 따라, 동결할 레이어 동결시키기\n",
         "'''n = 0\n",
@@ -571,16 +577,16 @@
         "    l.crossattention.requires_grad_()\n",
         "  else:\n",
         "    continue'''"
-      ],
-      "metadata": {
-        "id": "OIWQwNUD5SO4"
-      },
-      "id": "OIWQwNUD5SO4",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "EdLk26mp5uIW",
+      "metadata": {
+        "id": "EdLk26mp5uIW"
+      },
+      "outputs": [],
       "source": [
         "# 동결, 학습가능 layer 확인\n",
         "for name, param in model.named_parameters():\n",
@@ -588,13 +594,7 @@
         "        print(name, \"is trainable\")\n",
         "    else:\n",
         "        print(name, \"is frozen\")"
-      ],
-      "metadata": {
-        "id": "EdLk26mp5uIW"
-      },
-      "id": "EdLk26mp5uIW",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -610,6 +610,12 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "nLNWbDiC6Sog",
+      "metadata": {
+        "id": "nLNWbDiC6Sog"
+      },
+      "outputs": [],
       "source": [
         "lr = 1e-6\n",
         "E = 30\n",
@@ -675,13 +681,7 @@
         "\n",
         "    # train 시 성능지표 확인 위한 코드 (선택사항)\n",
         "    #gen_captions(train_caption,train_cpath+'/'+str(epoch+1)+'.json')"
-      ],
-      "metadata": {
-        "id": "nLNWbDiC6Sog"
-      },
-      "id": "nLNWbDiC6Sog",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -698,31 +698,31 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "ubCbq0Ur9gmK",
+      "metadata": {
+        "id": "ubCbq0Ur9gmK"
+      },
+      "outputs": [],
       "source": [
         "val = []\n",
         "for i in range(30):\n",
         "    val.append(coco_caption_eval(\"./meta_data/annotaions/gt_captions.json\",f'.meta_data/output/val/{i+1}.json').eval.items())"
-      ],
-      "metadata": {
-        "id": "ubCbq0Ur9gmK"
-      },
-      "id": "ubCbq0Ur9gmK",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "5x1as03t-Nip",
+      "metadata": {
+        "id": "5x1as03t-Nip"
+      },
+      "outputs": [],
       "source": [
         "# 결과 json 파일로 저장\n",
         "with open('./meta_data/ouput/score.json','w') as f:\n",
         "  json.dump(val,f)"
-      ],
-      "metadata": {
-        "id": "5x1as03t-Nip"
-      },
-      "id": "5x1as03t-Nip",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -785,6 +785,12 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "WQHHtjoMB_8m",
+      "metadata": {
+        "id": "WQHHtjoMB_8m"
+      },
+      "outputs": [],
       "source": [
         "# 이미지 데이터 SR한 리스트 반환 함수\n",
         "def image_list_with_sr_inf(dir,n,m):\n",
@@ -795,83 +801,79 @@
         "        image = super_reso(image) if image.size[0]<50 or image.size[1]<100 else image\n",
         "        imagelist.append(image)\n",
         "    return imagelist"
-      ],
-      "metadata": {
-        "id": "WQHHtjoMB_8m"
-      },
-      "id": "WQHHtjoMB_8m",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "UVhEDtFKA-EW",
+      "metadata": {
+        "id": "UVhEDtFKA-EW"
+      },
+      "outputs": [],
       "source": [
         "model.to('cpu')\n",
         "\n",
         "model_sr.to(device)\n",
         "ImageList = image_list_with_sr_inf('.meta_data/inference_image_dataset',0,10)\n",
+        "model_sr.to('cpu')\n",
         "\n",
-        "model_sr.to('cpu')"
-      ],
-      "metadata": {
-        "id": "UVhEDtFKA-EW"
-      },
-      "id": "UVhEDtFKA-EW",
-      "execution_count": null,
-      "outputs": []
+        "# 체크포인트 모델 불러오기\n",
+        "model = BlipForConditionalGeneration.from_pretrained('.meta_data/checkpoint_best.pt')"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "oo6qNtJeCLIX",
+      "metadata": {
+        "id": "oo6qNtJeCLIX"
+      },
       "source": [
         "##### 데이터 변환 및 결과 확인\n",
         "- 데이터 변환\n",
         "- 각 사진마다 생성된 caption 확인"
-      ],
-      "metadata": {
-        "id": "oo6qNtJeCLIX"
-      },
-      "id": "oo6qNtJeCLIX"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "wXw7fHoHBcNV",
+      "metadata": {
+        "id": "wXw7fHoHBcNV"
+      },
+      "outputs": [],
       "source": [
         "pixel_values =  processor.image_processor(images=ImageList, return_tensors=\"pt\").pixel_values # 데이터 변환\n",
         "model.to(device)\n",
         "outputs=processor.batch_decode(model.generate(pixel_values=pixel_values.to(device),max_length = 300),skip_special_tokens=True)"
-      ],
-      "metadata": {
-        "id": "wXw7fHoHBcNV"
-      },
-      "id": "wXw7fHoHBcNV",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "hB0LWq9dBcW6",
+      "metadata": {
+        "id": "hB0LWq9dBcW6"
+      },
+      "outputs": [],
       "source": [
         "for i in range(10):\n",
         "    print(outputs[i])\n",
         "    ImageList[i].show()\n",
         "    print()"
-      ],
-      "metadata": {
-        "id": "hB0LWq9dBcW6"
-      },
-      "id": "hB0LWq9dBcW6",
-      "execution_count": null,
-      "outputs": []
+      ]
     }
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
       "collapsed_sections": [
         "3p_hLjWF5oBp",
         "4I6p-03l0z4v",
         "1gSVYpED5Jqz",
         "PxPBCLcd40Ey",
         "d2448471-996d-425e-8130-aca498eb8e5f"
-      ]
+      ],
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
