--- a/0_local_image_captioning.ipynb
+++ b/0_local_image_captioning.ipynb
@@ -240,8 +240,8 @@
       "source": [
         "# super resolution을 진행할 모델 불러오기\n",
         "from transformers import Swin2SRImageProcessor, Swin2SRForImageSuperResolution\n",
-        "pro_sr = Swin2SRImageProcessor.from_pretrained(\"./meta_data/super_resol/preprocessor\")\n",
-        "model_sr = Swin2SRForImageSuperResolution.from_pretrained(\"./meta_data/super_resol/srwinsr.pt\")"
+        "pro_sr = Swin2SRImageProcessor.from_pretrained(\"caidas/swin2SR-lightweight-x2-64\")\n",
+        "model_sr = Swin2SRForImageSuperResolution.from_pretrained(\"caidas/swin2SR-lightweight-x2-64\")"
       ]
     },
     {
